syntax = "proto3";

package standort.v2;

option go_package = "github.com/alexfalkowski/standort/api/standort/v2";
option ruby_package = "Standort::V2";

// Location of the response.
message Location {
  string country = 1;
  string continent = 2;
}

// Point for the request.
message Point {
  double lat = 1;
  double lng = 2;
}

// GetLocationRequest for getting the location.
message GetLocationRequest {
  string ip = 1;
  Point point = 2;
}

// GetLocationResponse for getting the location.
message GetLocationResponse {
  map<string, string> meta = 1;
  Location ip = 2;
  Location geo = 3;
}

// Service allows to get location via multiple methods.
service Service {
  // GetLocation via multiple methods.
  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse) {}
}
